Added aws-lambda-serverless module and created hardcoded responses for the basic actions

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tudor Rotarus",
   "license": "ISC",
   "dependencies": {
+    "aws-serverless-express": "^3.2.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
