--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "aws-serverless-express": "^3.2.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "bunyan": "^1.8.12",
+    "dynamodb": "^1.1.2",
     "express": "^4.16.1",
+    "joi": "^13.4.0",
     "jsonwebtoken": "^8.0.1",
     "multer": "^1.3.0"
   }
