--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bunyan": "^1.8.12",
+    "compression": "^1.7.2",
     "dtrace-provider": "^0.8.7",
     "dynamodb": "^1.1.2",
     "express": "^4.16.1",
+    "helmet": "^3.12.1",
     "joi": "^13.4.0",
     "jsonwebtoken": "^8.0.1",
     "lodash": "^4.17.10",
