--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "helmet": "^3.12.1",
     "joi": "^13.4.0",
     "jsonwebtoken": "^8.0.1",
+    "knex": "^0.15.2",
     "lodash": "^4.17.10",
     "morgan": "^1.9.0",
     "multer": "^1.3.0"
