--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "knex": "^0.15.2",
     "lodash": "^4.17.10",
     "morgan": "^1.9.0",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "mysql": "2.16.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
